unpackaged/main/default/objects/Opportunity/fields/Batch_Created__c.field-meta.xml
<CustomField>
    <fullName>Batch_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It indicates, if an opportunity has been auto created by the batch job. Used in batch that automatically creates opportunities</description>
    <label>Auto Created</label>
    <type>Checkbox</type>
</CustomField>