unpackaged/main/default/objects/Opportunity/fields/Blue_Region__c.field-meta.xml
<CustomField>
    <fullName>Blue_Region__c</fullName>
    <formula>Account.Blue_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blue Region</label>
    <type>Text</type>
</CustomField>