unpackaged/main/default/objects/Opportunity/fields/Blue_Rep_Region__c.field-meta.xml
<CustomField>
    <fullName>Blue_Rep_Region__c</fullName>
    <description>Used for opportunity sharing. Populated by trigger, based on region of Master Group. e.g. if &#39;FL__c&#39; field on master group = true, then the value in this field will be &#39;FL&#39;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Rep Region</label>
    <length>180</length>
    <type>Text</type>
</CustomField>