unpackaged/main/default/objects/Opportunity/fields/Campaign_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Assignment__c</fullName>
    <description>Formula field created to enable Opportunity List View filter based on Primary Campaign Source.</description>
    <formula>Campaign.Name</formula>
    <inlineHelpText>Formula field created to enable Opportunity List View filter based on Primary Campaign Source.</inlineHelpText>
    <label>Campaign Assignment</label>
    <type>Text</type>
</CustomField>