unpackaged/main/default/objects/Opportunity/fields/Closed_Lost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Amount__c</fullName>
    <description>This field holds amount of all related closed lost opportunity products.</description>
    <label>Closed Lost Amount</label>
    <summarizedField>OpportunityLineItem.Closed_Lost_Total_Price_Custom__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>