unpackaged/main/default/objects/Opportunity/fields/Closed_Lost_Count__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Count__c</fullName>
    <description>Total number of closed lost related opportunity line items.</description>
    <label>Line Items Lost</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Line_Item_Stage__c</field>
        <operation>equals</operation>
        <value>Closed Lost - Quoted, Closed Lost - Not Quoted</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>