unpackaged/main/default/objects/Opportunity/fields/FL__c.field-meta.xml
<CustomField>
    <fullName>FL__c</fullName>
    <formula>Account.FL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FL</label>
    <type>Checkbox</type>
</CustomField>