unpackaged/main/default/objects/Opportunity/fields/Line_Item_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Quoted__c</fullName>
    <label>Line Item Quoted</label>
    <summarizedField>OpportunityLineItem.Opportunity_Products__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Quoted__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>