unpackaged/main/default/objects/Opportunity/fields/LSV_Group_Size__c.field-meta.xml
<CustomField>
    <fullName>LSV_Group_Size__c</fullName>
    <formula>Account.LSV_Group_Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LSV Group Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>