unpackaged/main/default/objects/Opportunity/fields/Not_Closed_Line_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Not_Closed_Line_Item_Count__c</fullName>
    <description>Total number of related opportunity line items that are not closed.</description>
    <label>Line Items Open</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Line_Item_Stage__c</field>
        <operation>notEqual</operation>
        <value>Closed Won,  Closed Lost - Quoted, Closed Lost - Not Quoted</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>