unpackaged/main/default/objects/Opportunity/fields/Opp_Name_Correct__c.field-meta.xml
<CustomField>
    <fullName>Opp_Name_Correct__c</fullName>
    <description>Checks to see if the opportunity name matches the naming convention. Created because WFR to set name wasn&#39;t working but issue could not be reproduced.</description>
    <formula>if(Account.Name +&#39;-&#39;+ TEXT(Type)+&#39;-&#39;+TEXT(Effective_Date__c) =  Name ,TRUE,FALSE)</formula>
    <label>Opp Name Correct</label>
    <type>Checkbox</type>
</CustomField>