unpackaged/main/default/objects/Opportunity/fields/Opp_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Opp_Quoted__c</fullName>
    <formula>IF(Line_Item_Quoted__c &gt; 0, &quot;Quoted&quot;, &quot;Not Quoted&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Quoted</label>
    <type>Text</type>
</CustomField>