unpackaged/main/default/objects/Opportunity/fields/Opportunities_Count__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Count__c</fullName>
    <defaultValue>&quot;Opportunities&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunities #</label>
    <length>32</length>
    <type>Text</type>
</CustomField>