unpackaged/main/default/objects/Opportunity/fields/Opportunity_ID_Case_Safe__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID_Case_Safe__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity ID - Case Safe</label>
    <type>Text</type>
</CustomField>