unpackaged/main/default/objects/Opportunity/fields/Partner_Rep__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Rep</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Contact.Title</field>
            <operation>equals</operation>
            <value>BC Rep</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>