unpackaged/main/default/objects/Opportunity/fields/Partner_Rep_Director__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rep_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Rep Director</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Partner Rep Director)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>