unpackaged/main/default/objects/Opportunity/fields/Partner_Rep_Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rep_Territory_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Rep Territory Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>