unpackaged/main/default/objects/Opportunity/fields/Partner_Rep_VP__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rep_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Rep VP</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Partner Rep VP)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>