unpackaged/main/default/objects/Opportunity/fields/Quoted_Eligibles__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Eligibles__c</fullName>
    <inlineHelpText>FL -&gt; Full time active Life, then Dental, then Disability
AR -&gt; Full time active Life, then Disability, then Worksite
HI -&gt; Full time active Medical, then Dental, then Life, then TDI</inlineHelpText>
    <label>Quoted Eligibles</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>