unpackaged/main/default/objects/Opportunity/fields/RFP__c.field-meta.xml
<CustomField>
    <fullName>RFP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RFP</label>
    <type>Checkbox</type>
</CustomField>