unpackaged/main/default/objects/Opportunity/fields/Submitted_to_UW__c.field-meta.xml
<CustomField>
    <fullName>Submitted_to_UW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted to UW</label>
    <type>Checkbox</type>
</CustomField>