unpackaged/main/default/objects/Opportunity/fields/Update_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Update_Effective_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is being used on opportunity effective date update and will be used in opportunity name workflow.</description>
    <label>Update Effective Date</label>
    <type>Checkbox</type>
</CustomField>