unpackaged/main/default/objects/Opportunity/recordTypes/Lock_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Lock_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Opportunity Sales Process</businessProcess>
    <description>This record type will be used to lock the record from editing once the opportunity is closed lost.</description>
    <label>Lock Opportunity</label>
</RecordType>