unpackaged/main/default/objects/Opportunity/recordTypes/Sales.recordType-meta.xml
<RecordType>
    <fullName>Sales</fullName>
    <active>true</active>
    <businessProcess>Opportunity Sales Process</businessProcess>
    <description>This handles both sales renewal process</description>
    <label>Sales</label>
</RecordType>