unpackaged/main/default/objects/Opportunity/validationRules/Due_Date_based_on_RFP.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_based_on_RFP</fullName>
    <active>true</active>
    <errorConditionFormula>RFP__c  &amp;&amp; ISBLANK(Due_Date__c)</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>If RFP is checked, Please enter a &#39;Due Date&#39;.</errorMessage>
</ValidationRule>