unpackaged/main/default/objects/Opportunity/validationRules/OPP001_Opportunity_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP001_Opportunity_Locked</fullName>
    <active>true</active>
    <description>Cannot edit opportunity when opportunity is locked.</description>
    <errorConditionFormula>AND (RecordType.DeveloperName == &#39;Lock_Opportunity&#39;, 
      $Profile.Name != &#39;USAble System Administrator&#39;,
      $UserRole.Name != &#39;Regional VP Sales - FCL,MA&#39;,
      $UserRole.Name != &#39;VP Account Management (Renewals)&#39;,
      $UserRole.Name != &#39;Regional VP Sales - AR&#39;,
      $UserRole.Name != &#39;Regional VP Sales - HI&#39;,
     DATEVALUE(NOW()) &gt;=  Effective_Date__c + 30 
)</errorConditionFormula>
    <errorMessage>OPP001 Opportunity is Locked</errorMessage>
</ValidationRule>