unpackaged/main/default/objects/Opportunity/validationRules/OPP002_Opp_Account_RecordType_Not_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP002_Opp_Account_RecordType_Not_Valid</fullName>
    <active>true</active>
    <description>Requires that the account on the opportunity be either a Master Group or Prospect</description>
    <errorConditionFormula>Account.RecordType.DeveloperName = &#39;Agency&#39; ||
Account.RecordType.DeveloperName = &#39;Other&#39; ||
Account.RecordType.DeveloperName = &#39;Partner&#39;</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>OPP002 Opportunity should be tied to a Master Group or Prospect Account.</errorMessage>
</ValidationRule>