unpackaged/main/default/objects/Opportunity/validationRules/OPP004_Service_Agency_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP004_Service_Agency_Check</fullName>
    <active>true</active>
    <description>Prevents user from selecting a Service Master Agency, Master Group, Prospect and Partner on opportunity. Agency must be a branch agency.</description>
    <errorConditionFormula>OR
(
   Broker_Agency__r.Master_Agency_Record__c  = true, 
   Broker_Agency__r.RecordType.DeveloperName = &#39;Prospect&#39;, 
   Broker_Agency__r.RecordType.DeveloperName = &#39;Master_Group&#39;,
   Broker_Agency__r.RecordType.DeveloperName = &#39;Partner&#39;

)</errorConditionFormula>
    <errorDisplayField>Broker_Agency__c</errorDisplayField>
    <errorMessage>OPP004 Please select a Branch Agency account only.</errorMessage>
</ValidationRule>