unpackaged/main/default/objects/Opportunity/validationRules/OPP005_Opp_prohibited_OutOfRegion.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP005_Opp_prohibited_OutOfRegion</fullName>
    <active>true</active>
    <description>Sales users are not allowed to create opportunities for accounts in other regions</description>
    <errorConditionFormula>AND( 
	OR ($Profile.Name == &#39;USAble Standard Sales User&#39;, 
        $Profile.Name == &#39;USAble Standard Dental Underwriting&#39;
        ), NOT($UserRole.Name == &#39;RFP Analyst&#39;),
	OR (
		Account.RecordType.Name == &#39;Master Group&#39;, 
		Account.RecordType.Name == &#39;Prospect&#39;
	),
	NOT( 
		OR( 
			( Account.FL__c &amp;&amp; INCLUDES($User.Region__c, &#39;FL&#39;)), 
			( Account.AR__c &amp;&amp; INCLUDES($User.Region__c, &#39;AR&#39;)), 
			( Account.HI__c &amp;&amp; INCLUDES($User.Region__c, &#39;HI&#39;)),
			( Account.RG__c &amp;&amp; INCLUDES($User.Region__c, &#39;RG&#39;)),
			(Account.FL__c &amp;&amp; Account.AR__c &amp;&amp; Account.HI__c &amp;&amp; Account.RG__c) 
		) 
	) 
)</errorConditionFormula>
    <errorMessage>OPP005 You are not allowed to create an opportunity for an account outside of your region.</errorMessage>
</ValidationRule>