unpackaged/main/default/objects/Opportunity/validationRules/OPP006_Create_not_allowed_in_close_stage.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP006_Create_not_allowed_in_close_stage</fullName>
    <active>true</active>
    <description>System users are not allowed to create an opportunity from Closed stage.</description>
    <errorConditionFormula>AND( 
ISNEW(), 
IsClosed 
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>OPP006 Opportunity record cannot be created with a &#39;Closed&#39; stage</errorMessage>
</ValidationRule>