unpackaged/main/default/objects/Opportunity/validationRules/OPP007_RFP_Analyst_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP007_RFP_Analyst_is_required</fullName>
    <active>true</active>
    <description>RFP Analyst is required if RFP checkbox is checked</description>
    <errorConditionFormula>AND( RFP__c = True,  ISBLANK(RFP_Analyst__c ) )</errorConditionFormula>
    <errorDisplayField>RFP_Analyst__c</errorDisplayField>
    <errorMessage>If RFP is checked, Please select the &#39;RFP Analyst&#39;.</errorMessage>
</ValidationRule>