unpackaged/main/default/objects/Opportunity/validationRules/OPP008_New_Business_Opp_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP008_New_Business_Opp_Type</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL (Type, &quot;New Business&quot;) &amp;&amp;  NOT(ISPICKVAL(Account.Type, &#39;Prospect&#39;))</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>New Business Opportunity Type is only applicable to Prospect Accounts.</errorMessage>
</ValidationRule>