unpackaged/main/default/objects/Opportunity/validationRules/OPP009_Cross_Sell_Opp_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP009_Cross_Sell_Opp_Type</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL (Type, &quot;Cross Sell&quot;) &amp;&amp; NOT(ISPICKVAL ( Account.LSV_Business__c, &quot;Medical Only&quot;))</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>You can only create a Cross Sell Opportunity for Medical Only Accounts.</errorMessage>
</ValidationRule>