unpackaged/main/default/objects/Opportunity/validationRules/OPP010_Up_Sell_Opp_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP010_Up_Sell_Opp_Type</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL (Type, &quot;Up Sell&quot;) &amp;&amp; ISPICKVAL ( Account.LSV_Business__c, &quot;Medical Only&quot;)</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>You cannot create a Up Sell Opportunity for Accounts that don&#39;t have an at least one active Ancillary Asset.</errorMessage>
</ValidationRule>