unpackaged/main/default/objects/Opportunity/listViews/All_NW_Open_Opportunities.listView-meta.xml
<ListView>
    <fullName>All_NW_Open_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Effective_Date__c</columns>
    <columns>Broker_Agency__c</columns>
    <columns>Partner_Rep__c</columns>
    <columns>LSV_Group_Size__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY_SCORE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>New,In Process</value>
    </filters>
    <filters>
        <field>Blue_Rep_Region__c</field>
        <operation>contains</operation>
        <value>RG</value>
    </filters>
    <label>All NW Open Opportunities</label>
</ListView>