unpackaged/main/default/objects/Opportunity/listViews/All_open_opportunitiesPartnerServices.listView-meta.xml
<ListView>
    <fullName>All_open_opportunitiesPartnerServices</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>Effective_Date__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>Partner_Rep__c</columns>
    <columns>Blue_Rep_Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>New,In Process</value>
    </filters>
    <label>All Open Opportunities Partner Services</label>
    <sharedTo>
        <group>All_Partner_Services</group>
    </sharedTo>
</ListView>