unpackaged/main/default/objects/Opportunity/listViews/AR_Open_Opps_Submitted_UW.listView-meta.xml
<ListView>
    <fullName>AR_Open_Opps_Submitted_UW</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Blue_Rep_Region__c</field>
        <operation>equals</operation>
        <value>AR</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>In Process</value>
    </filters>
    <filters>
        <field>Submitted_to_UW__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>AR Open Opps Submitted UW</label>
    <sharedTo>
        <group>Dental_Underwriting</group>
        <role>System_Admin</role>
    </sharedTo>
</ListView>