unpackaged/main/default/objects/Opportunity/listViews/My_Opportunities_Quoted_Open.listView-meta.xml
<ListView>
    <fullName>My_Opportunities_Quoted_Open</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Effective_Date__c</columns>
    <columns>Partner_Rep__c</columns>
    <columns>Batch_Created__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.AMOUNT</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <label>My Opportunities - Quoted Open</label>
    <sharedTo>
        <group>All_Arkansas_Sales</group>
        <group>All_Florida_Sales</group>
        <group>All_Hawaii_Sales</group>
        <group>Junior_Admin_Group</group>
    </sharedTo>
</ListView>